--- a/ui/index.html
+++ b/ui/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -7,23 +8,95 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+      
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
+	
 
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          
+    <main role="main">
+
+      <section class="jumbotron text-center">
+        <div class="container">
+		<form id="from_search">
+          <h1 class="jumbotron-heading">Search</h1>
+          <p class="lead text-muted"><input type="text" name="keyword" id="keyword"></p>
+          <button type="button" id="btn_submit" onclick="search()" class="btn btn-primary" > Search
+		  </form>
+        </div>
+      </section>
+
+      <div class="album py-5 bg-light">
+        <div class="container" id="result">
+
+          <div class="row">
+
+			</div>
         </div>
       </div>
-    </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    </main>
+
+
+    <script>
+function search () {
+	let keyword = $('#keyword').val();
+
+    var html = '';	
+if(keyword==''){
+	
+	html += '<div class="row">';
+	html += '<div class="col-md-12"><h1>Please insert keyword</h1></div>'
+	html += '</div>';
+	$("#result").html(html);
+}else{
+$.ajax({
+  method: "GET",
+  dataType: "json",
+  url: "https://api.kingfishtuna.com/frontend/get_product"
+})
+  .done(function( msg ) {
+  
+	html += '<div class="row">';
+	if(msg.result.product.length >0){
+		msg.result.product.forEach(element => {
+		html += '\
+		  <div class="col-md-4">\
+			<div class="card mb-4 box-shadow" id="content_' + element.product_id + '">\
+			  <img class="card-img-top" data-src="' + element.img_path + '" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;" src="' + element.img_path + '" data-holder-rendered="true">\
+			  <div class="card-body">\
+				<p class="card-text">' + element.product_name_en + '</p>\
+				<div class="d-flex justify-content-between align-items-center">\
+				  <div class="btn-group">\
+				  </div>\
+				  <small class="text-muted">4000</small>\
+				</div>\
+			  </div>\
+			</div>\
+		  </div>\
+		';
+		});
+		
+		html += '</div>';
+		$("#result").html(html);
+  }else{
+  
+	html += '<div class="row">';
+	html += '<div class="col-md-12"><h1>Content not found</h1></div>'
+	html += '</div>';
+	$("#result").html(html);
+  }
+  
+  });
+		
+        }
+		
+		}
+      </script>
+	
+	
   </body>
 </html>
