--- a/ui/index.html
+++ b/ui/index.html
@@ -33,7 +33,27 @@
         <div class="container" id="result">
 
           <div class="row">
+		  <!--
+            <div class="col-md-4">
+              <div class="card mb-4 box-shadow" id="content_0">
+                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22348%22%20height%3D%22225%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20348%20225%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_16295065a32%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A17pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_16295065a32%22%3E%3Crect%20width%3D%22348%22%20height%3D%22225%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22116.45000076293945%22%20y%3D%22120.3%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
+                <div class="card-body">
+                  <p class="card-text">product name</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">                      
+                    </div>
+                    <small class="text-muted">4000</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+			-->
 
+			
+			
+
+			
+			
 			</div>
         </div>
       </div>
@@ -44,10 +64,8 @@
     <script>
 function search () {
 	let keyword = $('#keyword').val();
-
     var html = '';	
-if(keyword==''){
-	
+if(keyword==''){	
 	html += '<div class="row">';
 	html += '<div class="col-md-12"><h1>Please insert keyword</h1></div>'
 	html += '</div>';
@@ -65,6 +83,7 @@ $.ajax({
 		msg.result.product.forEach(element => {
 		html += '\
 		  <div class="col-md-4">\
+		  <a href="detail.html?id=' + element.product_id + '">\
 			<div class="card mb-4 box-shadow" id="content_' + element.product_id + '">\
 			  <img class="card-img-top" data-src="' + element.img_path + '" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;" src="' + element.img_path + '" data-holder-rendered="true">\
 			  <div class="card-body">\
@@ -76,21 +95,19 @@ $.ajax({
 				</div>\
 			  </div>\
 			</div>\
+			</a>\
 		  </div>\
 		';
-		});
-		
+		});		
 		html += '</div>';
 		$("#result").html(html);
-  }else{
-  
+  }else{  
 	html += '<div class="row">';
 	html += '<div class="col-md-12"><h1>Content not found</h1></div>'
 	html += '</div>';
 	$("#result").html(html);
-  }
-  
-  });
+  }  
+});
 		
         }
 		
